--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Kollab</string>
+    <string name="introduce_tu_email">Introduce tu email</string>
+    <string name="introdueix_contrasenya">Introdueix contrasenya</string>
+    <string name="login">Login</string>
 </resources>
