--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="introduce_tu_email">Introduce tu email</string>
     <string name="introdueix_contrasenya">Introdueix contrasenya</string>
     <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="contraseña">contraseña</string>
+    <string name="register">Register</string>
 </resources>
