--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Kollab</string>
+    <string name="app_logo">Logo de la aplicación Kollab</string>
+    <string name="swipe_left">flecha swipe left (like)</string>
+    <string name="swipe_right">flecha swipe right per descartar perfil</string>
 </resources>
