pantalla de perfil de usuario acabada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
     <string name="post1_desc">Mi nuevo proyecto r...</string>
     <string name="post2_desc">Os comparto mi má...</string>
     <string name="post3_desc">Kotlin Y Python junt...</string>
+    <string name="post4_desc">Me encanta anunc...</string>
+    <string name="post5_desc">Nuevo proyecto en...</string>
+
 </resources>
