Commit FINAL!! Filtros funccionales

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,5 +66,7 @@
     <string name="mark">✔</string>
     <string name="chats">Chats</string>
     <string name="ajustes">Ajustes</string>
+    <string name="filtrar_por_g_nero">Filtrar por género</string>
+    <string name="filtrar_por_puesto">Filtrar por puesto</string>
 
 </resources>
